Thu Sep 12 16:30:12 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(exec): Delete special dependencies.

Thu Sep  5 11:11:19 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c: Include <version.h>.
	(exec_version): Delete variable.
 	(S_exec_init): Pass empty string as release; HURD_VERSION
	as version.

Thu Aug 29 13:00:38 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* priv.h: Only include <bfd.h> if BFD.  Only declare
	host_bfd_arc_info, and bfd_host_bfd if BFD.  If not BFD, give
	typedef for asection. 
	* main.c: Only define host_bfd_arch_info, host_bfd, and
	bfd_mach_host_arch_mach if BFD.  
	(main): Only call bfd_mach_most_arch_mach if BFD.
	Call mach_host_elf_machine.
	* hostarch.c (bfd_mach_host_arch_mach): Only define if BFD.
	Delete arg E_MACHINE.  All callers changed.
	(mach_host_elf_machine): New function.

Sun Jul  7 21:13:22 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* exec.c (S_exec_exec): Don't use unsafe MOVE_SEND in call to
 	interruptible exec_exec stub.

Mon Jul  1 16:08:03 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (DIST_FILES): Removed crash.c.
	* crash.c: Moved to ../trans.

Thu Jun 20 15:43:51 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (exec): Link against fshelp too now.

	* exec.c (do_exec): Call proc_setowner *after* possible
 	proc_reassign; otherwise it modifies the stub process's state and
 	not the real process's.

Wed Jun 19 14:08:15 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* exec.c (do_exec, S_exec_exec): Pass 0 for new LOOKUP arg to
	hurd_file_name_lookup.
	* hashexec.c (hurd_file_name_path_lookup): Declaration removed.
	(check_hashbang): Pass 0 for new LOOKUP arg to hurd_file_name_lookup.

Wed Jun 12 21:17:33 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* gzip.h (basename): Comment out declaration; it conflicts with
 	libc's.
